# sipp_sub

./: CMakeLists.txt
190testy/: CALL.xml  CALL_ver149-prod.sh  REGISTER.sh  REGISTER_client.xml  SUBSCRIBE.sh  SUBSCRIBE_remote_client.xml  UNREGISTER.sh  UNREGISTER.xml
src/: call.cpp
