cmake_minimum_required(VERSION 3.10)
project(sipp_3_5_1)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)

add_executable(sipp_3_5_1
        190testy/CALL.xml
        190testy/CALL_15496_errors.log
        190testy/CALL_16000_errors.log
        190testy/CALL_16000_messages.log
        190testy/CALL_500-599.csv
        190testy/CALL_ver149-prod.sh
        190testy/P1.pcap
        190testy/REGISTER.sh
        190testy/REGISTER_client.xml
        190testy/REGISTER_ver149.csv
        190testy/regTest.pcap
        190testy/SUBSCRIBE.sh
        190testy/SUBSCRIBE_remote_client.xml
        190testy/SUBSCRIBE_remote_client_v2.xml
        190testy/SUBSCRIBE_ver149.csv
        190testy/test118.pcap
        190testy/UNREGISTER.csv
        190testy/UNREGISTER.sh
        190testy/UNREGISTER.xml
        autom4te.cache/output.0
        autom4te.cache/output.1
        autom4te.cache/requests
        autom4te.cache/traces.0
        autom4te.cache/traces.1
        include/actions.hpp
        include/auth.hpp
        include/call.hpp
        include/call_generation_task.hpp
        include/comp.h
        include/config.h
        include/config.h.in
        include/deadcall.hpp
        include/defines.h
        include/endianshim.h
        include/infile.hpp
        include/listener.hpp
        include/logger.hpp
        include/md5.h
        include/message.hpp
        include/milenage.h
        include/prepare_pcap.h
        include/ratetask.hpp
        include/reporttask.hpp
        include/rijndael.h
        include/rtpstream.hpp
        include/scenario.hpp
        include/screen.hpp
        include/send_packets.h
        include/sip_parser.hpp
        include/sipp.1
        include/sipp.hpp
        include/socket.hpp
        include/socketowner.hpp
        include/sslcommon.h
        include/stamp-h1
        include/stat.hpp
        include/strings.hpp
        include/task.hpp
        include/time.hpp
        include/variables.hpp
        include/version.h
        include/watchdog.hpp
        include/xp_parser.h
        m4/am_git_version.m4
        m4/am_git_version.mh
        m4/ax_check_compile_flag.m4
        m4/ax_config_feature.m4
        m4/ax_cxx_compile_stdcxx_11.m4
        m4/ax_have_epoll.m4
        pcap/dtmf_2833_0.pcap
        pcap/dtmf_2833_1.pcap
        pcap/dtmf_2833_2.pcap
        pcap/dtmf_2833_3.pcap
        pcap/dtmf_2833_4.pcap
        pcap/dtmf_2833_5.pcap
        pcap/dtmf_2833_6.pcap
        pcap/dtmf_2833_7.pcap
        pcap/dtmf_2833_8.pcap
        pcap/dtmf_2833_9.pcap
        pcap/dtmf_2833_pound.pcap
        pcap/dtmf_2833_star.pcap
        pcap/g711a.pcap
        "regress/github-#0018/notify-brackets.xml"
        "regress/github-#0018/run"
        "regress/github-#0034/notify-1234.xml"
        "regress/github-#0034/notify-manylf.xml"
        "regress/github-#0034/notify-nocrlf.xml"
        "regress/github-#0034/notify-withlf.xml"
        "regress/github-#0034/run"
        "regress/github-#0083-1/run"
        "regress/github-#0083-2/run"
        "regress/github-#0085/run"
        "regress/github-#0085/uac.xml"
        "regress/github-#0098/run"
        "regress/github-#0103/run"
        "regress/github-#0103/uas-modified.xml"
        "regress/github-#0130/run"
        "regress/github-#0150/run"
        "regress/github-#0152/run"
        "regress/github-#0152/uac.xml"
        "regress/github-#0152/uas.xml"
        "regress/github-#0155/run"
        "regress/github-#0156/run"
        regress/functions
        regress/runtests
        src/actions.cpp
        src/auth.cpp
        src/call.cpp
        src/call_generation_task.cpp
        src/comp.c
        src/deadcall.cpp
        src/fortune.cpp
        src/infile.cpp
        src/listener.cpp
        src/logger.cpp
        src/md5.c
        src/message.cpp
        src/milenage.c
        src/prepare_pcap.c
        src/ratetask.cpp
        src/reporttask.cpp
        src/rijndael.c
        src/rtpstream.cpp
        src/scenario.cpp
        src/screen.cpp
        src/send_packets.c
        src/sip_parser.cpp
        src/sipp-actions.o
        src/sipp-auth.o
        src/sipp-call.o
        src/sipp-call_generation_task.o
        src/sipp-comp.o
        src/sipp-deadcall.o
        src/sipp-infile.o
        src/sipp-listener.o
        src/sipp-logger.o
        src/sipp-md5.o
        src/sipp-message.o
        src/sipp-milenage.o
        src/sipp-ratetask.o
        src/sipp-reporttask.o
        src/sipp-rijndael.o
        src/sipp-rtpstream.o
        src/sipp-scenario.o
        src/sipp-screen.o
        src/sipp-sip_parser.o
        src/sipp-sipp.o
        src/sipp-socket.o
        src/sipp-socketowner.o
        src/sipp-stat.o
        src/sipp-strings.o
        src/sipp-task.o
        src/sipp-time.o
        src/sipp-variables.o
        src/sipp-watchdog.o
        src/sipp-xp_parser.o
        src/sipp.cpp
        src/sipp_unittest.cpp
        src/socket.cpp
        src/socketowner.cpp
        src/sslinit.c
        src/sslthreadsafe.c
        src/stat.cpp
        src/strings.cpp
        src/task.cpp
        src/time.cpp
        src/variables.cpp
        src/watchdog.cpp
        src/xp_parser.c
        src/xp_parser_ut.cpp
        aclocal.m4
        build.sh
        CHANGES.md
        config.guess
        config.log
        config.status
        config.sub
        configure
        configure.ac
        cpplint.py
        depcomp
        FAQ.md
        install-sh
        LICENSE.txt
        Makefile
        Makefile.am
        Makefile.in
        missing
        README.md
        sipp
        sipp.dtd
        test-driver
        THANKS)
